# fastapi-celery-redis

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: main.py  task.py
