[tool.poetry]
name = "fastapi-celery-redis"
version = "0.1.0"
description = ""
authors = ["JedersonLuz <jedersonalpha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.114.0"}
celery = {extras = ["redis"], version = "^5.4.0"}
uvicorn = {extras = ["standard"], version = "^0.30.6"}
pydantic = "^2.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
